--- a/index.html
+++ b/index.html
@@ -7,32 +7,34 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <h1>Header Logo</h1>
-        <ul>
+    <div class="nav">
+        <h1 class="logo">Header Logo</h1>
+        <ul class="links">
             <li>header link one</li>
             <li>header link two</li>
             <li>header link three</li>
         </ul>
     </div>
     
-    <div>
-        <h1>This website is awesome</h1>
-        <p>
-            This website has some subtext that goes here under the main title.
-            It's a smaller font and the color is lower contrast
-        </p>
-        <button>Sign up</button>
-        <div>
-            <p>this is a placeholder for an image</p>
+    <div class="hero">
+        <div class="hero-left">
+            <h1 class="hero-left-text">This website is awesome</h1>
+            <p class="hero-para">
+                This website has some subtext that goes here under the main title.
+                It's a smaller font and the color is lower contrast
+            </p>
+            <button class="hero-button">Sign up</button>
+        </div>
+        <div class="hero-right">
+            <p class="hero-right-text">this is a placeholder for an image</p>
         </div>
     </div>
 
-    <div>
+    <div class="info">
         <h1>Some random information</h1>
     </div>
 
-    <div>
+    <div class="info-image">
         <img src="" alt="">
         <p>this is some subtext under an illustration or image</p>
         <img src="" alt="">
@@ -43,23 +45,23 @@
         <p>this is some subtext under an illustration or image</p>
     </div>
 
-    <div>
-        <p>This is an inspiring quote, or testimonial from a customer.
+    <div class="quote">
+        <p class="quote-text">This is an inspiring quote, or testimonial from a customer.
             Maybe it's just filling up a space, or maybe people will 
             actually read it. Who knows? All I know is that it looks nice.
         </p>
-        <p>Thor, God of Thunder</p>
+        <p class="quote-sign">-Thor, God of Thunder</p>
     </div>
 
-    <div>
-        <div>
+    <div class="action">
+        <div class="action-left">
             <h1>Call to action! It's time!</h1>
-            <p>Sign up for our product by clicking that button right over there</p>
-            <button>Sign up</button>
+            <p>Sign up for our product by clicking that button right over there!</p>
         </div>
+            <button class="action-button">Sign up</button>
     </div>
 
-    <div>
+    <div class="footer">
         <p>Copyright The Odin Project 2024 </p>
     </div>
 </body>
